--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@
     <!-- About NUBS-->
     <section class="pt-5 pb-2">
       <div class="container">
-        <h1 class="mb-4">Our Weekly Activities</h1>
+        <h1 class="mb-4">Gallery</h1>
         <div class="row g-4">
           <div class="col-sm-6 col-lg-4">
             <a href="#" class="text-dark btn">
