--- a/index.html
+++ b/index.html
@@ -258,7 +258,11 @@
 
         <div class="row ms-auto">
           <div class="col-md-6 m-auto">
-            <div id="events" class="carousel slide" data-bs-ride="carousel">
+            <div
+              id="testimonies"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="text-center">
@@ -323,7 +327,7 @@
                 <button
                   class="carousel-control-prev"
                   type="button"
-                  data-bs-target="#events"
+                  data-bs-target="#testimonies"
                   data-bs-slide="prev"
                 >
                   <span
@@ -335,7 +339,7 @@
                 <button
                   class="carousel-control-next"
                   type="button"
-                  data-bs-target="#events"
+                  data-bs-target="#testimonies"
                   data-bs-slide="next"
                 >
                   <span
