--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,10 @@
       <div class="container text-center">
         <h1 class="mb-4">Reach Out To Us</h1>
 
-        <form action="#" method="post" class="p-sm-5 shadow">
-          <div class="row my-3">
+        <form action="#" method="post" class="p-sm-5 shadow p-3">
+          <div class="row g-4">
             <!-- Last name -->
-            <div class="col">
+            <div class="col-md-6">
               <div class="form-group">
                 <input
                   type="text"
@@ -95,7 +95,7 @@
               </div>
             </div>
             <!-- Other names -->
-            <div class="col">
+            <div class="col-md-6">
               <div class="form-group">
                 <input
                   type="text"
@@ -107,9 +107,9 @@
             </div>
           </div>
 
-          <div class="row my-3">
+          <div class="row my-1 g-4">
             <!-- Email address -->
-            <div class="col">
+            <div class="col-md-6">
               <div class="form-group">
                 <input
                   type="email"
@@ -120,7 +120,7 @@
               </div>
             </div>
             <!-- Type of message -->
-            <div class="col">
+            <div class="col-md-6">
               <div class="form-group">
                 <select name="message_type" class="form-control">
                   <option disabled selected>Select a reason</option>
@@ -133,12 +133,14 @@
 
           <div class="row my-3">
             <!-- Message -->
-            <textarea
-              name="message"
-              rows="10"
-              class="form-control"
-              placeholder="Type your message here..."
-            ></textarea>
+            <div class="form-group">
+              <textarea
+                name="message"
+                rows="10"
+                class="form-control"
+                placeholder="Type your message here..."
+              ></textarea>
+            </div>
           </div>
 
           <input
@@ -155,11 +157,11 @@
     <section class="p-sm-5 mt-5">
       <div class="container text-center">
         <h3>Reach Us</h3>
-        <div class="d-flex justify-content-center align-items-center">
+        <div class="d-sm-flex justify-content-center align-items-center">
           <div class="me-3 lead">
             <i class="bi bi-telephone h5"></i> +233 00 000 0000
           </div>
-          <div class="ms-3 lead">
+          <div class="ms-3 lead my-2">
             <i class="bi bi-envelope h5"></i> info@nubsucc.com
           </div>
         </div>
