--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </section>
 
     <!-- Testimonies -->
-    <section class="pb-5">
+    <section class="pb-5 pt-5 my-5 pt-sm-0 my-sm-0">
       <div class="container p-sm-5 text-center">
         <h1 class="mt-2 mb-5">Testimonies</h1>
 
