Weekly activities spacing

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </section>
 
     <!-- Weekly Activities -->
-    <section class="p-sm-5">
+    <section class="p-sm-5 pt-5 mt-3 mt-sm-0 pt-sm-0">
       <div class="container text-center">
         <h1 class="pt-3 pb-5">Weekly Activities</h1>
         <div class="row g-4">
