--- a/contact.html
+++ b/contact.html
@@ -1,235 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NUBS UCC</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>NUBS UCC</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css"
-      integrity="sha384-7ynz3n3tAGNUYFZD3cWe5PDcE36xj85vyFkawcF6tIwxvIecqKvfwLiaFdizhPpN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/css.css" />
-  </head>
-  <body>
-    <header class="header">
-      <nav class="navbar navbar-expand-lg bg-light navbar-light shadow">
-        <div class="container">
-          <a href="index.php" class="navbar-brand">
-            <img
-              src="assets/nubs_logo.png"
-              alt="NUBS LOGO"
-              width="50"
-              class="d-inline-block align-text-top"
-            />
-            NUBS UCC
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navMenu"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+			crossorigin="anonymous"
+		></script>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css"
+			integrity="sha384-7ynz3n3tAGNUYFZD3cWe5PDcE36xj85vyFkawcF6tIwxvIecqKvfwLiaFdizhPpN"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="css/css.css" />
+	</head>
+	<body>
+		<header class="header">
+			<nav class="navbar navbar-expand-lg bg-light navbar-light shadow">
+				<div class="container">
+					<a href="index.php" class="navbar-brand">
+						<img
+							src="assets/nubs_logo.png"
+							alt="NUBS LOGO"
+							width="50"
+							class="d-inline-block align-text-top"
+						/>
+						NUBS UCC
+					</a>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navMenu"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
 
-          <div class="collapse navbar-collapse" id="navMenu">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a href="index.html" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="about.html" class="nav-link">About</a>
-              </li>
-              <li class="nav-item">
-                <a href="news-events.html" class="nav-link">News/Events</a>
-              </li>
-              <li class="nav-item">
-                <a href="gallery.html" class="nav-link">Gallery</a>
-              </li>
-              <li class="nav-item">
-                <a href="departments.html" class="nav-link">Departments</a>
-              </li>
-              <li class="nav-item">
-                <a href="executives.html" class="nav-link">Executives</a>
-              </li>
-              <li class="nav-item">
-                <a href="contact.html" class="nav-link">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+					<div class="collapse navbar-collapse" id="navMenu">
+						<ul class="navbar-nav ms-auto">
+							<li class="nav-item">
+								<a href="index.html" class="nav-link">Home</a>
+							</li>
+							<li class="nav-item">
+								<a href="about.html" class="nav-link">About</a>
+							</li>
+							<li class="nav-item">
+								<a href="news-events.html" class="nav-link">News/Events</a>
+							</li>
+							<li class="nav-item">
+								<a href="gallery.html" class="nav-link">Gallery</a>
+							</li>
+							<li class="nav-item">
+								<a href="departments.html" class="nav-link">Departments</a>
+							</li>
+							<li class="nav-item">
+								<a href="executives.html" class="nav-link">Executives</a>
+							</li>
+							<li class="nav-item">
+								<a href="contact.html" class="nav-link">Contact</a>
+							</li>
+							<li class="nav-item">
+								<a href="donate.html" class="nav-link"><u>Donate</u></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</header>
 
-    <!-- Executives of NUBS-->
-    <section class="pt-5 pb-3">
-      <div class="container text-center">
-        <h1 class="mb-4">Reach Out To Us</h1>
+		<!-- Executives of NUBS-->
+		<section class="pt-5 pb-3">
+			<div class="container text-center">
+				<h1 class="mb-4">Reach Out To Us</h1>
 
-        <form
-          action="#"
-          method="post"
-          class="p-sm-5 shadow p-3"
-          onsubmit="return validateForm()"
-        >
-          <div class="row g-4">
-            <!-- Last name -->
-            <div class="col-md-6">
-              <div class="form-group">
-                <input
-                  type="text"
-                  placeholder="Enter your last name..."
-                  class="form-control"
-                  name="last_name"
-                  id="last_name"
-                  required
-                />
-              </div>
-            </div>
-            <!-- Other names -->
-            <div class="col-md-6">
-              <div class="form-group">
-                <input
-                  type="text"
-                  placeholder="Enter your other names..."
-                  class="form-control"
-                  name="other_names"
-                  id="other_names"
-                  required
-                />
-              </div>
-            </div>
-          </div>
+				<form
+					action="#"
+					method="post"
+					class="p-sm-5 shadow p-3"
+					onsubmit="return validateForm()"
+				>
+					<div class="row g-4">
+						<!-- Last name -->
+						<div class="col-md-6">
+							<div class="form-group">
+								<input
+									type="text"
+									placeholder="Enter your last name..."
+									class="form-control"
+									name="last_name"
+									id="last_name"
+									required
+								/>
+							</div>
+						</div>
+						<!-- Other names -->
+						<div class="col-md-6">
+							<div class="form-group">
+								<input
+									type="text"
+									placeholder="Enter your other names..."
+									class="form-control"
+									name="other_names"
+									id="other_names"
+									required
+								/>
+							</div>
+						</div>
+					</div>
 
-          <div class="row my-1 g-4">
-            <!-- Email address -->
-            <div class="col-md-6">
-              <div class="form-group">
-                <input
-                  type="email"
-                  placeholder="Enter your email address..."
-                  class="form-control"
-                  name="email_address"
-                  id="email_address"
-                  required
-                />
-              </div>
-            </div>
-            <!-- Type of message -->
-            <div class="col-md-6">
-              <div class="form-group">
-                <select
-                  name="message_type"
-                  id="message_type"
-                  class="form-control"
-                  required
-                >
-                  <option disabled selected value="0">Select a reason</option>
-                  <option value="testimony">Testimony</option>
-                  <option value="other">Other</option>
-                </select>
-              </div>
-            </div>
-          </div>
+					<div class="row my-1 g-4">
+						<!-- Email address -->
+						<div class="col-md-6">
+							<div class="form-group">
+								<input
+									type="email"
+									placeholder="Enter your email address..."
+									class="form-control"
+									name="email_address"
+									id="email_address"
+									required
+								/>
+							</div>
+						</div>
+						<!-- Type of message -->
+						<div class="col-md-6">
+							<div class="form-group">
+								<select
+									name="message_type"
+									id="message_type"
+									class="form-control"
+									required
+								>
+									<option disabled selected value="0">Select a reason</option>
+									<option value="testimony">Testimony</option>
+									<option value="other">Other</option>
+								</select>
+							</div>
+						</div>
+					</div>
 
-          <div class="row my-3">
-            <!-- Message -->
-            <div class="form-group">
-              <textarea
-                name="message"
-                id="message"
-                rows="10"
-                class="form-control"
-                placeholder="Type your message here..."
-                required
-              ></textarea>
-            </div>
-          </div>
+					<div class="row my-3">
+						<!-- Message -->
+						<div class="form-group">
+							<textarea
+								name="message"
+								id="message"
+								rows="10"
+								class="form-control"
+								placeholder="Type your message here..."
+								required
+							></textarea>
+						</div>
+					</div>
 
-          <input
-            type="submit"
-            class="btn btn-nubsBlue px-4 py-2 mt-3"
-            value="Send message"
-            name="message_submit"
-          />
-        </form>
-      </div>
-    </section>
+					<input
+						type="submit"
+						class="btn btn-nubsBlue px-4 py-2 mt-3"
+						value="Send message"
+						name="message_submit"
+					/>
+				</form>
+			</div>
+		</section>
 
-    <!-- Contact Info -->
-    <section class="p-sm-5 mt-5">
-      <div class="container text-center">
-        <h3>Reach Us</h3>
-        <div class="d-sm-flex justify-content-center align-items-center">
-          <div class="me-3 lead">
-            <i class="bi bi-telephone h5"></i> +233 00 000 0000
-          </div>
-          <div class="ms-3 lead my-2">
-            <i class="bi bi-envelope h5"></i> info@nubsucc.com
-          </div>
-        </div>
-      </div>
-    </section>
+		<!-- Contact Info -->
+		<section class="p-sm-5 mt-5">
+			<div class="container text-center">
+				<h3>Reach Us</h3>
+				<div class="d-sm-flex justify-content-center align-items-center">
+					<div class="me-3 lead">
+						<i class="bi bi-telephone h5"></i> +233 00 000 0000
+					</div>
+					<div class="ms-3 lead my-2">
+						<i class="bi bi-envelope h5"></i> info@nubsucc.com
+					</div>
+				</div>
+			</div>
+		</section>
 
-    <!-- Motto -->
-    <section class="pb-5 text-white">
-      <div class="container text-center">
-        <h3>Follow Us On</h3>
-        <a href="#"><i class="bi bi-instagram text-dark mx-1 h3 mx-2"></i></a>
-        <a href="#"><i class="bi bi-facebook text-dark mx-1 h3 mx-2"></i></a>
-        <p class="lead mb-0" style="color: red">
-          <em>Empowered... For action!!!</em>
-        </p>
-      </div>
-    </section>
+		<!-- Motto -->
+		<section class="pb-5 text-white">
+			<div class="container text-center">
+				<h3>Follow Us On</h3>
+				<a href="#"><i class="bi bi-instagram text-dark mx-1 h3 mx-2"></i></a>
+				<a href="#"><i class="bi bi-facebook text-dark mx-1 h3 mx-2"></i></a>
+				<p class="lead mb-0" style="color: red">
+					<em>Empowered... For action!!!</em>
+				</p>
+			</div>
+		</section>
 
-    <!-- Footer -->
-    <footer
-      class="footer p-5 text-white text-center position-relative"
-      style="background-color: rgb(3, 23, 83)"
-    >
-      <div class="container">
-        <p class="lead">Copyright NUBS UCC &copy; 2022</p>
-        <a href="#" class="position-absolute bottom-0 end-0 p-5 text-white">
-          <i class="bi bi-arrow-up-circle h1"></i>
-        </a>
-      </div>
-    </footer>
-  </body>
+		<!-- Footer -->
+		<footer
+			class="footer p-5 text-white text-center position-relative"
+			style="background-color: rgb(3, 23, 83)"
+		>
+			<div class="container">
+				<p class="lead">Copyright NUBS UCC &copy; 2022</p>
+				<a href="#" class="position-absolute bottom-0 end-0 p-5 text-white">
+					<i class="bi bi-arrow-up-circle h1"></i>
+				</a>
+			</div>
+		</footer>
+	</body>
 </html>
 
 <script>
-  function validateForm() {
-    var last_name = document.getElementById("last_name").value;
-    var other_names = document.getElementById("other_names").value;
-    var email_address = document.getElementById("email_address").value;
-    var message = document.getElementById("message").value;
-    var message_type = document.getElementById("message_type").value;
+	function validateForm() {
+		var last_name = document.getElementById("last_name").value;
+		var other_names = document.getElementById("other_names").value;
+		var email_address = document.getElementById("email_address").value;
+		var message = document.getElementById("message").value;
+		var message_type = document.getElementById("message_type").value;
 
-    if (
-      last_name.trim() == "" ||
-      other_names.trim() == "" ||
-      email_address.trim() == "" ||
-      message.trim() == "" ||
-      message_type == 0
-    ) {
-      alert("Message fields can not be empty!");
-      return false;
-    }
-  }
+		if (
+			last_name.trim() == "" ||
+			other_names.trim() == "" ||
+			email_address.trim() == "" ||
+			message.trim() == "" ||
+			message_type == 0
+		) {
+			alert("Message fields can not be empty!");
+			return false;
+		}
+	}
 </script>
