--- a/gallery.html
+++ b/gallery.html
@@ -70,6 +70,9 @@
               <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
               </li>
+              <li class="nav-item">
+								<a href="donate.html" class="nav-link"><u>Donate</u></a>
+							</li>
             </ul>
           </div>
         </div>
