--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
 			</div>
 		</section>
 
+		<section
+			style="background-color: rgb(11, 37, 119)"
+			class="container p-1 rounded-bottom"
+		></section>
+
 		<!-- Welcome Address -->
 		<section class="p-sm-5 my-3 my-sm-0">
 			<div class="container">
