--- a/admin/forgot-password.html
+++ b/admin/forgot-password.html
@@ -39,11 +39,13 @@
 
 					<div class="col-md-6 m-auto">
 						<div class="card shadow">
-							<div class="card-title fs-3 text-center pt-2">
-								<strong>Admin Login</strong>
-							</div>
 							<div class="card-body">
 								<form>
+									<p class="text-secondary">
+										Forgot your password? No problem. Type in your email address
+										and we will email you a password reset link that will allow
+										you to choose a new one.
+									</p>
 									<div class="form-group mt-2">
 										<label for="email" class="lead">Email</label>
 										<input
@@ -53,27 +55,13 @@
 											required
 										/>
 									</div>
-									<div class="form-group mt-2">
-										<label for="password" class="lead">Password</label>
-										<input
-											type="password"
-											class="form-control"
-											name="password"
-											required
-										/>
-									</div>
-
-									<div class="form-group mt-2">
-										<input type="checkbox" name="remember" required />
-										<small>Remember me</small>
-									</div>
 
 									<div class="row">
 										<div class="col">
-											<button class="btn btn-nubsBlue mt-4">Login</button>
+											<button class="btn btn-nubsBlue mt-4">
+												Send Reset Link
+											</button>
 										</div>
-										<a href="register.html" class="mt-3">Register instead</a>
-										<a href="#"><small>Forgot password</small></a>
 									</div>
 								</form>
 							</div>
