--- a/admin/reset-password.html
+++ b/admin/reset-password.html
@@ -40,7 +40,7 @@
 					<div class="col-md-6 m-auto">
 						<div class="card shadow">
 							<div class="card-title fs-3 text-center pt-2">
-								<strong>Admin Login</strong>
+								<strong>Reset Password</strong>
 							</div>
 							<div class="card-body">
 								<form>
@@ -51,6 +51,7 @@
 											class="form-control"
 											name="email"
 											required
+											autofocus
 										/>
 									</div>
 									<div class="form-group mt-2">
@@ -64,16 +65,21 @@
 									</div>
 
 									<div class="form-group mt-2">
-										<input type="checkbox" name="remember" required />
-										<small>Remember me</small>
+										<label for="password" class="lead">Confirm Password</label>
+										<input
+											type="password"
+											class="form-control"
+											name="password_confirmation"
+											required
+										/>
 									</div>
 
 									<div class="row">
 										<div class="col">
-											<button class="btn btn-nubsBlue mt-4">Login</button>
+											<button class="btn btn-nubsBlue mt-4">
+												Reset Password
+											</button>
 										</div>
-										<a href="register.html" class="mt-3">Register instead</a>
-										<a href="#"><small>Forgot password</small></a>
 									</div>
 								</form>
 							</div>
