--- a/admin/verify-email.html
+++ b/admin/verify-email.html
@@ -39,42 +39,24 @@
 
 					<div class="col-md-6 m-auto">
 						<div class="card shadow">
-							<div class="card-title fs-3 text-center pt-2">
-								<strong>Admin Login</strong>
-							</div>
 							<div class="card-body">
+								<p class="text-secondary">
+									You are now signing up! Before getting started, could you
+									verify your email address by clicking on the link we just
+									emailed to you? If you didn't receive the email, another one
+									will be sent to you.
+								</p>
 								<form>
-									<div class="form-group mt-2">
-										<label for="email" class="lead">Email</label>
-										<input
-											type="email"
-											class="form-control"
-											name="email"
-											required
-										/>
-									</div>
-									<div class="form-group mt-2">
-										<label for="password" class="lead">Password</label>
-										<input
-											type="password"
-											class="form-control"
-											name="password"
-											required
-										/>
-									</div>
-
-									<div class="form-group mt-2">
-										<input type="checkbox" name="remember" required />
-										<small>Remember me</small>
-									</div>
-
 									<div class="row">
 										<div class="col">
-											<button class="btn btn-nubsBlue mt-4">Login</button>
+											<button class="btn btn-nubsBlue mt-4">
+												Resend Verification Email
+											</button>
 										</div>
-										<a href="register.html" class="mt-3">Register instead</a>
-										<a href="#"><small>Forgot password</small></a>
 									</div>
+								</form>
+								<form action="#">
+									<button class="btn text-secondary mt-4">Logout</button>
 								</form>
 							</div>
 						</div>
