--- a/admin/confirm-password.html
+++ b/admin/confirm-password.html
@@ -39,41 +39,27 @@
 
 					<div class="col-md-6 m-auto">
 						<div class="card shadow">
-							<div class="card-title fs-3 text-center pt-2">
-								<strong>Admin Login</strong>
-							</div>
 							<div class="card-body">
+								<p class="text-secondary">
+									This is a secure area of the application. Please confirm your
+									password before continuing.
+								</p>
 								<form>
-									<div class="form-group mt-2">
-										<label for="email" class="lead">Email</label>
-										<input
-											type="email"
-											class="form-control"
-											name="email"
-											required
-										/>
-									</div>
 									<div class="form-group mt-2">
 										<label for="password" class="lead">Password</label>
 										<input
 											type="password"
 											class="form-control"
 											name="password"
+											autocomplete="current-password"
 											required
 										/>
 									</div>
 
-									<div class="form-group mt-2">
-										<input type="checkbox" name="remember" />
-										<small>Remember me</small>
-									</div>
-
 									<div class="row">
 										<div class="col">
-											<button class="btn btn-nubsBlue mt-4">Login</button>
+											<button class="btn btn-nubsBlue mt-4">Confirm</button>
 										</div>
-										<a href="register.html" class="mt-3">Register instead</a>
-										<a href="#"><small>Forgot password</small></a>
 									</div>
 								</form>
 							</div>
