--- a/admin/gallery.html
+++ b/admin/gallery.html
@@ -119,11 +119,11 @@
 					</div>
 
 					<!-- Modal -->
-					<div class="modal fade" id="gal1" tabindex="-1">
+					<div class="modal fade" id="editTile" tabindex="-1">
 						<div class="modal-dialog modal-fullscreen-md-down">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h5 class="modal-title">Sunday Service</h5>
+									<h5 class="modal-title">Edit tile</h5>
 									<button
 										type="button"
 										class="btn-close"
@@ -132,16 +132,26 @@
 									></button>
 								</div>
 								<div class="modal-body">
-									<img
-										src="../assets/pic1.jpeg"
-										alt="sunday"
-										class="card-img-top"
-									/>
-								</div>
-								<div class="modal-footer">
-									<a href="#" class="btn btn-nubsBlue rounded-pill px-4 py-1">
-										<small> View more <i class="bi bi-instagram"></i> </small>
-									</a>
+									<form action="" enctype="multipart/form-data">
+										<div class="form-group mb-3">
+											<label for="image" class="lead">Priview Image</label>
+											<input
+												type="file"
+												class="form-control"
+												name="priview_image"
+											/>
+										</div>
+										<div class="formg-group mb-3">
+											<label for="link" class="lead">Link</label>
+											<input type="text" name="link" class="form-control" />
+										</div>
+										<button
+											type="submit"
+											class="btn btn-nubsBlue rounded-pill px-3"
+										>
+											Save
+										</button>
+									</form>
 								</div>
 							</div>
 						</div>
