--- a/admin/testimony.html
+++ b/admin/testimony.html
@@ -132,7 +132,7 @@
 
 								<!-- Edit Testimony Modal -->
 								<div class="modal fade" id="editTestimony" tabindex="-1">
-									<div class="modal-dialog">
+									<div class="modal-dialog modal-fullscreen-md-down">
 										<div class="modal-content">
 											<div class="modal-header">
 												<h5 class="my-0">Edit testimony</h5>
