--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 			</nav>
 		</header>
 
-		<!-- Executives of NUBS-->
+		<!-- Contact form-->
 		<section class="pt-5 pb-3">
 			<div class="container text-center">
 				<h1 class="mb-4">Reach Out To Us</h1>
